<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/bg_screen" >

    <include layout="@layout/common_title" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/linearTop"
        android:layout_marginBottom="5dip" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical" >
            
            <Button
                android:id="@+id/btn_referral_post"
                android:layout_width="fill_parent"
                android:layout_height="48dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="16dip"
                android:background="@drawable/post_finish_btn"
                android:text="@string/button_referral_post"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="bold" />
            
            <Button
                android:id="@+id/btn_referral_haibao"
                android:layout_width="fill_parent"
                android:layout_height="48dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="16dip"
                android:background="@drawable/post_finish_btn"
                android:text="@string/button_referral_poster"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="bold" />
            
            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="@dimen/set_table_height"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp" >

                <View
                    android:id="@+id/lineView"
                    android:layout_width="fill_parent"
                    android:layout_height="5dp"
                    android:layout_alignParentBottom="true"
                    android:layout_centerVertical="true"
                    android:background="@color/base_green" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:text="@string/title_referral_info_detail"
                    android:textColor="@color/base_green"
                    android:textSize="18sp" />
            </RelativeLayout>
            
            <Button
                android:id="@+id/btn_referral_posts_detail"
                android:layout_width="fill_parent"
                android:layout_height="48dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="16dip"
                android:background="@drawable/post_finish_btn"
                android:text="@string/button_referral_detail_post"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="bold" />
            
            <Button
                android:id="@+id/btn_referral_haibao_detail"
                android:layout_width="fill_parent"
                android:layout_height="48dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="16dip"
                android:background="@drawable/post_finish_btn"
                android:text="@string/button_referral_detail_haibao"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="bold" />
            
            <Button
                android:id="@+id/btn_referral_app_detail"
                android:layout_width="fill_parent"
                android:layout_height="48dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="16dip"
                android:background="@drawable/post_finish_btn"
                android:text="@string/button_referral_detail_app"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="bold" />
            
        </LinearLayout>
    </ScrollView>

</RelativeLayout>