<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/postgoodslayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#f5f5f5" >

    <include layout="@layout/common_title" />

    <LinearLayout
        android:id="@+id/ll_quota"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearTop"
        android:orientation="vertical" >

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@drawable/list_divider" >
        </View>
    </LinearLayout>

    <ScrollView
        android:id="@+id/goodscontent"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/ll_quota"
        android:clickable="true"
        android:focusableInTouchMode="true"
        android:paddingBottom="@dimen/post_padding"
        android:paddingLeft="@dimen/post_padding"
        android:paddingRight="@dimen/post_padding"
        android:scrollbars="none" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/layout_txt"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusableInTouchMode="true"
                android:orientation="vertical" >

                <include
                    android:id="@+id/image_list"
                    layout="@layout/post_image_list" />

            </LinearLayout>
            
 			<LinearLayout android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dip"
                android:orientation="horizontal" >
 			
				<TextView android:layout_width="wrap_content"
 			    	android:layout_height="wrap_content"
 			    	android:layout_marginRight="5dp"
 			    	android:text="@string/text_referral_poster_location"
 			    	android:textColor="#000000"
 			    	android:textSize="18sp"/>
                
                <EditText android:id="@+id/edit_poster_location"
                    android:layout_width="fill_parent"
 			    	android:layout_height="wrap_content"
 			    	android:hint="@string/hint_referral_location"
 			    	android:text=""/>
                
            </LinearLayout>
            
            <LinearLayout android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dip"
                android:orientation="horizontal" >
 			
				<TextView android:layout_width="wrap_content"
 			    	android:layout_height="wrap_content"
 			    	android:layout_marginRight="5dp"
 			    	android:text="@string/text_referral_poster_contact"
 			    	android:textColor="#000000"
 			    	android:textSize="18sp"/>
                
                <EditText android:id="@+id/edit_poster_contact"
                    android:layout_width="fill_parent"
 			    	android:layout_height="wrap_content"
 			    	android:inputType="phone"
 			    	android:hint="@string/hint_referral_contact"
 			    	android:text="" />
                
            </LinearLayout>
 			    
            <Button
                android:id="@+id/btn_qrcode_scan"
                android:layout_width="fill_parent"
                android:layout_height="48dp"
                android:layout_marginTop="0dip"
                android:background="@drawable/post_finish_btn"
                android:text="@string/button_referral_poster_qrcodescan"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="bold" >
            </Button>
            
            <Button
                android:id="@+id/iv_post_finish"
                android:layout_width="fill_parent"
                android:layout_height="48dp"
                android:layout_marginTop="10dip"
                android:background="@drawable/post_finish_btn"
                android:text="@string/button_referral_poster_post"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="bold" >
            </Button>

            <View
                android:id="@+id/padding_bottom"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:visibility="invisible" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/networkErrorView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/background_light"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone" >

        <ImageView
            android:layout_width="66dp"
            android:layout_height="66dp"
            android:src="@drawable/icon_no_info" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="网络出错"
            android:textColor="@color/common_info"
            android:textSize="18sp" />
    </LinearLayout>

</RelativeLayout>